// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unit test for IntegrationOptions component match chrome snapshot: chrome 1`] = `
<div>
  <div
    class="chakra-stack css-tl3ftk"
  >
    <div
      class="chakra-form-control css-0"
      data-testid="filenameDetector-integration-switch"
      label="Translated<options:integrations_Filename Detector>"
      role="group"
    >
      <label
        class="chakra-form__label css-28a6i0"
        data-testid="feature-switch-label"
        for=":r0:"
        id="field-:r1:-label"
      >
        <div
          class="chakra-stack css-mz2o5n"
          style="transition: background 300ms;"
        >
          <div
            class="chakra-stack css-1bef4uc"
          >
            <p
              class="chakra-text css-1tbqbam"
            >
              Translated&lt;options:integrations_Filename Detector&gt;
            </p>
            <p
              class="chakra-text css-qljqz"
            >
              Translated&lt;options:integrations_The detector can notify user when the filename is modified by other extensions.&gt;
            </p>
             
          </div>
          <div
            class="css-fzqoy4"
          >
            <label
              class="chakra-switch css-16pgy8f"
              data-checked=""
              data-testid="feature-switch"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                checked=""
                class="chakra-switch__input"
                id=":r0:"
                style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
                type="checkbox"
              />
              <span
                aria-hidden="true"
                class="chakra-switch__track css-14qxnv8"
                data-checked=""
              >
                <span
                  class="chakra-switch__thumb css-0"
                  data-checked=""
                />
              </span>
            </label>
          </div>
        </div>
      </label>
    </div>
    <div
      class="chakra-form-control css-0"
      data-testid="dispatchToAria2-integration-switch"
      label="Translated<options:integrations_Dispatch download to Aria2>"
      role="group"
    >
      <label
        class="chakra-form__label css-28a6i0"
        data-testid="feature-switch-label"
        for=":r2:"
        id="field-:r3:-label"
      >
        <div
          class="chakra-stack css-mz2o5n"
          style="transition: background 300ms;"
        >
          <div
            class="chakra-stack css-1bef4uc"
          >
            <p
              class="chakra-text css-1tbqbam"
            >
              Translated&lt;options:integrations_Dispatch download to Aria2&gt;
            </p>
            <p
              class="chakra-text css-qljqz"
            >
              Translated&lt;options:integrations_Transfer the download to Aria2 via 
              <a
                class="chakra-link css-p03q1r"
                data-testid="aria2-ext-link"
                href="https://chrome.google.com/webstore/detail/mpkodccbngfoacfalldjimigbofkhgjn"
                target="_blank"
              >
                Translated&lt;options:integrations_Aria2-Explorer&gt;
              </a>
              .&gt;
            </p>
             
          </div>
          <div
            class="css-fzqoy4"
          >
            <label
              class="chakra-switch css-16pgy8f"
              data-testid="feature-switch"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                class="chakra-switch__input"
                id=":r2:"
                style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
                type="checkbox"
              />
              <span
                aria-hidden="true"
                class="chakra-switch__track css-14qxnv8"
              >
                <span
                  class="chakra-switch__thumb css-0"
                />
              </span>
            </label>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`unit test for IntegrationOptions component match edge snapshot: edge 1`] = `
<div>
  <div
    class="chakra-stack css-tl3ftk"
  >
    <div
      class="chakra-form-control css-0"
      data-testid="filenameDetector-integration-switch"
      label="Translated<options:integrations_Filename Detector>"
      role="group"
    >
      <label
        class="chakra-form__label css-28a6i0"
        data-testid="feature-switch-label"
        for=":r4:"
        id="field-:r5:-label"
      >
        <div
          class="chakra-stack css-mz2o5n"
          style="transition: background 300ms;"
        >
          <div
            class="chakra-stack css-1bef4uc"
          >
            <p
              class="chakra-text css-1tbqbam"
            >
              Translated&lt;options:integrations_Filename Detector&gt;
            </p>
            <p
              class="chakra-text css-qljqz"
            >
              Translated&lt;options:integrations_The detector can notify user when the filename is modified by other extensions.&gt;
            </p>
             
          </div>
          <div
            class="css-fzqoy4"
          >
            <label
              class="chakra-switch css-16pgy8f"
              data-checked=""
              data-testid="feature-switch"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                checked=""
                class="chakra-switch__input"
                id=":r4:"
                style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
                type="checkbox"
              />
              <span
                aria-hidden="true"
                class="chakra-switch__track css-14qxnv8"
                data-checked=""
              >
                <span
                  class="chakra-switch__thumb css-0"
                  data-checked=""
                />
              </span>
            </label>
          </div>
        </div>
      </label>
    </div>
    <div
      class="chakra-form-control css-0"
      data-testid="dispatchToAria2-integration-switch"
      label="Translated<options:integrations_Dispatch download to Aria2>"
      role="group"
    >
      <label
        class="chakra-form__label css-28a6i0"
        data-testid="feature-switch-label"
        for=":r6:"
        id="field-:r7:-label"
      >
        <div
          class="chakra-stack css-mz2o5n"
          style="transition: background 300ms;"
        >
          <div
            class="chakra-stack css-1bef4uc"
          >
            <p
              class="chakra-text css-1tbqbam"
            >
              Translated&lt;options:integrations_Dispatch download to Aria2&gt;
            </p>
            <p
              class="chakra-text css-qljqz"
            >
              Translated&lt;options:integrations_Transfer the download to Aria2 via 
              <a
                class="chakra-link css-p03q1r"
                data-testid="aria2-ext-link"
                href="https://chrome.google.com/webstore/detail/mpkodccbngfoacfalldjimigbofkhgjn"
                target="_blank"
              >
                Translated&lt;options:integrations_Aria2-Explorer&gt;
              </a>
              .&gt;
            </p>
             
          </div>
          <div
            class="css-fzqoy4"
          >
            <label
              class="chakra-switch css-16pgy8f"
              data-testid="feature-switch"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                class="chakra-switch__input"
                id=":r6:"
                style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
                type="checkbox"
              />
              <span
                aria-hidden="true"
                class="chakra-switch__track css-14qxnv8"
              >
                <span
                  class="chakra-switch__thumb css-0"
                />
              </span>
            </label>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`unit test for IntegrationOptions component match firefox snapshot: firefox 1`] = `
<div>
  <div
    class="chakra-stack css-tl3ftk"
  >
    <div
      class="chakra-form-control css-0"
      data-testid="filenameDetector-integration-switch"
      label="Translated<options:integrations_Filename Detector>"
      role="group"
    >
      <label
        class="chakra-form__label css-28a6i0"
        data-testid="feature-switch-label"
        for=":r8:"
        id="field-:r9:-label"
      >
        <div
          class="chakra-stack css-mz2o5n"
          style="transition: background 300ms;"
        >
          <div
            class="chakra-stack css-1bef4uc"
          >
            <p
              class="chakra-text css-1tbqbam"
            >
              Translated&lt;options:integrations_Filename Detector&gt;
            </p>
            <p
              class="chakra-text css-qljqz"
            >
              Translated&lt;options:integrations_The detector can notify user when the filename is modified by other extensions.&gt;
            </p>
             
          </div>
          <div
            class="css-fzqoy4"
          >
            <label
              class="chakra-switch css-16pgy8f"
              data-checked=""
              data-testid="feature-switch"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                checked=""
                class="chakra-switch__input"
                id=":r8:"
                style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
                type="checkbox"
              />
              <span
                aria-hidden="true"
                class="chakra-switch__track css-14qxnv8"
                data-checked=""
              >
                <span
                  class="chakra-switch__thumb css-0"
                  data-checked=""
                />
              </span>
            </label>
          </div>
        </div>
      </label>
    </div>
    <div
      class="chakra-form-control css-0"
      data-testid="dispatchToAria2-integration-switch"
      label="Translated<options:integrations_Dispatch download to Aria2>"
      role="group"
    >
      <label
        class="chakra-form__label css-28a6i0"
        data-testid="feature-switch-label"
        for=":ra:"
        id="field-:rb:-label"
      >
        <div
          class="chakra-stack css-mz2o5n"
          style="transition: background 300ms;"
        >
          <div
            class="chakra-stack css-1bef4uc"
          >
            <p
              class="chakra-text css-1tbqbam"
            >
              Translated&lt;options:integrations_Dispatch download to Aria2&gt;
            </p>
            <p
              class="chakra-text css-qljqz"
            >
              Translated&lt;options:integrations_Transfer the download to Aria2 via Translated&lt;options:integrations_Aria2-Explorer&gt;.&gt;
            </p>
             
          </div>
          <div
            class="css-fzqoy4"
          >
            <label
              class="chakra-switch css-16pgy8f"
              data-testid="feature-switch"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                class="chakra-switch__input"
                id=":ra:"
                style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
                type="checkbox"
              />
              <span
                aria-hidden="true"
                class="chakra-switch__track css-14qxnv8"
              >
                <span
                  class="chakra-switch__thumb css-0"
                />
              </span>
            </label>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;
